--- a/menu.css
+++ b/menu.css
@@ -1,7 +1,8 @@
 header {
-  padding: auto;
-  margin: auto;
+  padding: 0;
+  margin: 0;
 }
+
 /************** MENU *************/
 
 header {
@@ -38,10 +39,10 @@ header nav ul {
 a {
   text-decoration: none;
   font-weight: 700;
-  color: #e7ceb7;
+  color: #ba431f;
 }
 a:hover {
-  color: #cee7ca;
+  color: #47a1a1;
 }
 footer {
   position: sticky;
