--- a/menu.css
+++ b/menu.css
@@ -3,7 +3,95 @@ header {
   margin: 0;
 }
 
-/************** MENU *************/
+/***** Burger menu *****/
+
+.menu {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  margin-right: 20px;
+}
+
+.menu li:last-child {
+  margin-right: 0;
+}
+
+.menu a {
+  display: block;
+  padding: 10px;
+  color: #ba431f;
+  text-decoration: none;
+  transition: color 0.3s;
+  text-align: end;
+}
+
+.menu a:hover {
+  color: #47a1a1;
+}
+
+.burger {
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.burger .line {
+  width: 100%;
+  height: 2px;
+  background-color: #333;
+  margin-bottom: 5px;
+  transition: 0.2s linear;
+}
+.burger {
+  display: none;
+}
+@media screen and (max-width: 800px) {
+  .menu {
+    display: none;
+  }
+  .burger {
+    display: block;
+  }
+  .burger.active .line:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+    transition: 0.2s linear;
+  }
+
+  .burger.active .line:nth-child(2) {
+    opacity: 0;
+    transition: 0.15s linear;
+  }
+
+  .burger.active .line:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+    transition: 0.2s linear;
+  }
+
+  nav.active .menu {
+    display: block;
+    background-color: #fff;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+  }
+
+  nav.active .menu li {
+    margin: 10px 20px;
+  }
+
+  nav.active .menu a {
+    font-size: 24px;
+  }
+}
+
+/************** Desktop menu *************/
 
 header {
   position: sticky;
@@ -15,6 +103,7 @@ header {
   font-family: "Cinzel", serif;
   font-weight: 200;
   font-style: normal;
+  background-color: #bce0cd;
 }
 header .logo a {
   display: flex;
@@ -44,6 +133,15 @@ a {
 a:hover {
   color: #47a1a1;
 }
+
+@media (max-width: 750px) {
+  header {
+    display: none;
+  }
+}
+
+/**** Footer *****/
+
 footer {
   position: sticky;
   top: 0;
@@ -53,4 +151,48 @@ footer {
   align-items: baseline;
   font-family: "Cinzel", serif;
   font-weight: 200;
+  color: black;
+  text-decoration: none;
+  background-color: #bce0cd;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.kontakt {
+  color: #ba431f;
+  font-size: 1.2rem;
+  font-family: "Francois One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.info {
+  color: black;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.follow {
+  color: #ba431f;
+  font-size: 1.2rem;
+  font-family: "Francois One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.adresse {
+  color: black;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+  margin-right: 70px;
+  text-align: center;
+  line-height: 0.8;
+}
+
+.smiley {
+  width: 12%;
+  margin-left: 100px;
+  margin-top: 20px;
 }
