--- a/besoeg_tothaven.css
+++ b/besoeg_tothaven.css
@@ -45,5 +45,71 @@ h2 {
   margin-left: 37%;
 }
 
+.knap_billet {
+  background-color: #77bd97;
+  color: #d9522f;
+  font-family: "Francois One", sans-serif;
+  font-weight: 400;
+  font-size: 1.3rem;
+  border: none;
+  padding: 10px 20px;
+  transition-duration: 0.4s;
+  margin-left: 20%;
+}
+
+.knap_billet:hover {
+  background-color: #74c2a6;
+  color: #47a1a1;
+}
+
+.knap_årskort {
+  background-color: #77bd97;
+  color: #d9522f;
+  font-family: "Francois One", sans-serif;
+  font-weight: 400;
+  font-size: 1.3rem;
+  border: none;
+  padding: 10px 20px;
+  transition-duration: 0.4s;
+  margin-left: 40%;
+  margin-bottom: 10%;
+}
+.knap_årskort:hover {
+  background-color: #74c2a6;
+  color: #47a1a1;
+}
+
+iframe {
+  width: 70%;
+  margin-left: 15%;
+}
+.kort_over_tot {
+  width: 60%;
+  margin-left: 3cap;
+}
+
+.grid_1-1 {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin-top: 10%;
+  margin-left: 5%;
+}
+
+.kalender {
+  width: 70%;
+  margin-left: 15%;
+}
+
+.find_os_img {
+  width: 100%;
+}
+
+.find_os_text {
+  margin-left: 44%;
+}
+.kort_text {
+  margin-left: 30%;
+}
+
 @media (min-width: 750px) {
 }
