--- a/mentor.css
+++ b/mentor.css
@@ -3,6 +3,7 @@
   font-weight: 400;
   font-style: normal;
 }
+
 .francois-one-regular {
   font-family: "Francois One", sans-serif;
   font-weight: 400;
@@ -14,8 +15,10 @@
 img {
   width: 100%;
   display: block;
-  margin: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
+
 p {
   font-family: "DM Sans", sans-serif;
   font-weight: 200;
@@ -23,56 +26,96 @@ p {
   line-height: 2rem;
 }
 
+body {
+  background-color: #e7f2ee;
+  gap: 10px;
+}
+
 h1 {
   font-family: "Emblema One", system-ui;
   font-weight: 400;
   font-style: normal;
-  font-size: 8rem;
+  font-size: 3rem;
   color: #47a1a1;
-  margin-left: 15%;
-  letter-spacing: 0.2rem;
-}
-
-body {
-  background-color: #e7f2ee;
-  gap: 10px;
+  margin-left: 5%;
 }
 
 h2 {
   font-family: "Francois One", sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 40px;
   color: #d9522f;
 }
 
-/* img {
-  display: flex;
-  width: 100%;
-  height: 100%;
-} */
-
 @media (min-width: 750px) {
+  h1 {
+    font-family: "Emblema One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 8rem;
+    color: #47a1a1;
+    margin-left: 12%;
+  }
   .hvad_er_mentor_col-2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     order: -1;
+    margin-top: 5%;
   }
 
   .hvorfor_mentorforloeb_col_2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-top: 10%;
   }
   .pernille_jakob_col-2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-top: 10%;
+    margin-bottom: 10%;
   }
   .mentor_tekst {
     margin: 10%;
+    margin-top: 15%;
   }
   .hvorfor_mentor_tekst {
     margin: 10%;
+    margin-top: 25%;
   }
   .pernille_jakob_tekst {
     margin: 10%;
+    margin-top: 20%;
+  }
+  .order {
+    order: -1;
+  }
+  .img_collage {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 10px;
+    margin-top: 10px;
+  }
+
+  .img_collage img {
+    object-fit: cover;
+    height: 100%;
+  }
+  .pic4 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+  .pic5 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+  .pic6 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+  }
+  .pic7 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
   }
 }
