--- a/index.css
+++ b/index.css
@@ -3,6 +3,8 @@
 
 img{
 width:100%;
+display:block;
+height:auto;
 }
 
 body {
@@ -11,24 +13,23 @@ body {
     padding:0;
   }
 
-  h2{
-    font-family: "Francois One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size:40px;
-    color: #D9522F;
-  }
-
-  p {
-    font-family: "DM Sans", sans-serif;
-    font-weight:200;
-    font-style:normal;
-    line-height:2rem;
-    max-width:1000px;
-  }
-
   a:hover{
     color: #D9522F;
+  }
+
+  .LAG:hover {
+    color: #D9522F;
+  }
+
+@media (min-width:750px) {
+
+  /*LAG*/
+  .LAG{
+    font-size:15px;
+    color: #FFB000;
+    font-family: "Contrail One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   }
 
 /*HERO-IMAGE*/
@@ -36,15 +37,10 @@ body {
   .hero-image {
     position: relative;
     width: 100%;
-    height:760px;
+    height:710px;
     background: linear-gradient(rgba(76, 103, 95, 0.5), rgba(46, 45, 45, 0.5)), url(indhold/img/heroimage_cropped.jpg.webp) no-repeat 50% 0% fixed;
     background-size: 100%;
     overflow: hidden;
-  }
-
-  .grid_1-1{
-    display:grid;
-    grid-template-columns: 1fr 1fr;
   }
 
   .heroh1_2{
@@ -52,11 +48,11 @@ body {
     padding:0;
     text-align:right;
     color:white;
-    font-size:125px;
+    font-size:110px;
     font-family: "Contrail One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    padding-top:500px;
+    padding-top:480px;
   }
 
   .heroh1{
@@ -68,7 +64,7 @@ body {
     font-family: "Contrail One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    padding-top:400px;
+    padding-top:360px;
   }
 
   .heroh2{
@@ -82,16 +78,15 @@ body {
     font-style: normal;
   }
 
-  /*LINKS I TOPPEN*/
+   /*LINKS I TOPPEN*/
 
-  .billetter{
-    margin:10px;
-    padding-top:200px;
+   .billetter{
     text-align:left;
     font-size:30px;
     color: #FFB000;
     font-family: "Contrail One", sans-serif;
     font-weight: 400;
+    text-decoration: none;
   }
 
   .billetter:hover {
@@ -105,7 +100,6 @@ body {
     padding-left: 200px;
     padding-bottom: 200px;
     max-width:1070px;
-    padding-top:70px;
     height:450px;
   }
 
@@ -114,15 +108,6 @@ body {
     margin:0;
     padding-left:30px;
     padding-top:170px;
-  }
-
-  .grid_1-1-1{
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    list-style: none;
-    margin:20px;
-    text-align: center;
-    padding-bottom: 40px;
   }
 
   /*SLIDESHOW*/
@@ -147,34 +132,34 @@ body {
   height: 100%;
 }
 
-/*KNAPPER PÅ SLIDESHOW*/
+ /*knapper på slideshow*/
 
-.arrow {
-  color: #FFB000;
-  font-size: 3em;
-  position: absolute;
-  top: 50%;
-  left: 5%;
-  width: 90%;
-
-}
-.previous {
-  float: left;
-  cursor: pointer;
-  opacity: 0.1s;
-}
-.previous:hover {
-  opacity: 1;
-}
-.next {
-  float: right;
-  cursor: pointer;
-  opacity: 0.1s;
-}
-
-.next:hover {
-  opacity: 1;
-}
+ .arrow {
+    color: #FFB000;
+    font-size: 3em;
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    width: 90%;
+  
+  }
+  .previous {
+    float: left;
+    cursor: pointer;
+    opacity: 0.1s;
+  }
+  .previous:hover {
+    opacity: 1;
+  }
+  .next {
+    float: right;
+    cursor: pointer;
+    opacity: 0.1s;
+  }
+  
+  .next:hover {
+    opacity: 1;
+  }
 
 /*OS PÅ TOTHAVEN*/
 
@@ -194,23 +179,25 @@ body {
     height:500px;
 }
 
-/*BOX BAGVED INDHOLD*/
-
 .box{
-    color:#BCE0CD;
-    height:400px;
-    width:700px;
+    position:absolute;
+    background-color: #BCE0CD;
+    width:1430px;
+    height:500px;
+    z-index:-1;
+    }
+
+.box1{
+    position:absolute;
+    background-color: #BCE0CD;
+    width:1321px;
+    height:600px;
+    z-index:-1;
+    left:10%;
 }
 
-/*LAG*/
-.LAG{
-    font-size:15px;
-    color: #FFB000;
-    font-family: "Contrail One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  .LAG:hover {
-    color: #D9522F;
-  }
+.lottiefile{
+    width: 1500px;
+    height: 600px;
+}   
+}
