--- a/indexmenu.css
+++ b/indexmenu.css
@@ -1,4 +1,4 @@
-
+@media (min-width:750px) {
 .menu {
     position: sticky;
     top: 0;
@@ -39,4 +39,46 @@
   }
   .menutekst:hover {
     color: #d7d7d7;
+  }
+}
+  @media (max-width:750px) {
+    .menu {
+      position: sticky;
+      top: 0;
+      display: flex;
+      margin:10px;
+      justify-content: space-between;
+      align-items: center;
+      font-family: "Francois One", sans-serif;
+      font-style: normal;
+      font-size:10px;
+    }
+    .menu .logo a {
+      display: flex;
+      width: 100%;
+    }
+    .logo {
+      display: flex;
+      width: 60%;
+      height: auto;
+    }
+    
+    .menu nav ul {
+      display: flex;
+      justify-content: space-between;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      padding-bottom: 0.4rem;
+      gap: 30px;
+      overflow-x: auto;
+    }
+    .menutekst {
+      text-decoration: none;
+      font-weight: 100;
+      color:white;
+    }
+    .menutekst:hover {
+      color: #d7d7d7;
+    }
   }
