--- a/besoeg_tothaven.css
+++ b/besoeg_tothaven.css
@@ -21,28 +21,9 @@ p {
   line-height: 2rem;
 }
 
-h1 {
-  font-family: "Emblema One", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 8rem;
-  color: #47a1a1;
-  margin-left: 5%;
-  letter-spacing: 0.2rem;
-}
-
 body {
   background-color: #e7f2ee;
   gap: 10px;
-}
-
-h2 {
-  font-family: "Francois One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #d9522f;
-  font-size: 4rem;
-  margin-left: 37%;
 }
 
 .knap_billet {
@@ -55,11 +36,15 @@ h2 {
   padding: 10px 20px;
   transition-duration: 0.4s;
   margin-left: 20%;
+  display: block;
+  margin: 10px;
+  width: 150px;
+  text-align: center;
 }
 
 .knap_billet:hover {
   background-color: #74c2a6;
-  color: #47a1a1;
+  color: #bce0cd;
 }
 
 .knap_årskort {
@@ -72,11 +57,36 @@ h2 {
   padding: 10px 20px;
   transition-duration: 0.4s;
   margin-left: 40%;
-  margin-bottom: 10%;
+  margin: 10px;
+  display: block;
+  width: 150px;
+  text-align: center;
 }
 .knap_årskort:hover {
   background-color: #74c2a6;
+  color: #bce0cd;
+}
+.knapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+h1 {
+  font-family: "Emblema One", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2.5rem;
   color: #47a1a1;
+  /* letter-spacing: 0.2rem; */
+}
+
+h2 {
+  font-family: "Francois One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #d9522f;
+  font-size: 2.5rem;
+  margin-left: 25%;
 }
 
 iframe {
@@ -85,14 +95,7 @@ iframe {
 }
 .kort_over_tot {
   width: 60%;
-  margin-left: 3cap;
-}
-
-.grid_1-1 {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  margin-top: 10%;
-  margin-left: 5%;
+  margin-left: 25%;
 }
 
 .kalender {
@@ -108,8 +111,43 @@ iframe {
   margin-left: 44%;
 }
 .kort_text {
-  margin-left: 30%;
+  margin-left: 23%;
 }
-
 @media (min-width: 750px) {
+  .grid_1-1 {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-top: 10%;
+    margin-left: 5%;
+  }
+  h2 {
+    font-family: "Francois One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #d9522f;
+    font-size: 4rem;
+    margin-left: 37%;
+  }
+  h1 {
+    font-family: "Emblema One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 8rem;
+    color: #47a1a1;
+    margin-left: 5%;
+    letter-spacing: 0.2rem;
+  }
+  .knapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-left: 25%;
+  }
+  .boks {
+    position: absolute;
+    background-color: #bce0cd;
+    width: 1454px;
+    height: 670px;
+    z-index: -1;
+    top: 73%;
+  }
 }
