--- a/mentor.css
+++ b/mentor.css
@@ -118,4 +118,12 @@ h2 {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
   }
+  .boks {
+    position: absolute;
+    background-color: #bce0cd;
+    width: 1354px;
+    height: 690px;
+    z-index: -1;
+    top: 73%;
+  }
 }
