--- a/menu.css
+++ b/menu.css
@@ -1,3 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
 header {
   padding: 0;
   margin: 0;
@@ -73,7 +81,8 @@ header {
 
   nav.active .menu {
     display: block;
-    background-color: #fff;
+    background-color: #bce0cd;
+
     position: absolute;
     top: 60px;
     left: 0;
@@ -100,8 +109,7 @@ header {
   padding: 10px;
   justify-content: space-between;
   align-items: center;
-  font-family: "Cinzel", serif;
-  font-weight: 200;
+
   font-style: normal;
   background-color: #bce0cd;
 }
@@ -134,21 +142,12 @@ a:hover {
   color: #47a1a1;
 }
 
-@media (max-width: 750px) {
-  header {
-    display: none;
-  }
-}
-
 /**** Footer *****/
 
 footer {
   position: sticky;
   top: 0;
   padding: 1rem 2rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
   font-family: "Cinzel", serif;
   font-weight: 200;
   color: black;
@@ -181,18 +180,37 @@ footer {
   font-style: normal;
 }
 
+.insta {
+  color: black;
+  text-decoration: underline;
+  font-weight: 200;
+  font-family: "DM Sans", sans-serif;
+}
+
+.facebook {
+  color: black;
+  text-decoration: underline;
+  font-weight: 200;
+  font-family: "DM Sans", sans-serif;
+}
+
 .adresse {
   color: black;
   font-family: "DM Sans", sans-serif;
   font-weight: 200;
   font-style: normal;
-  margin-right: 70px;
   text-align: center;
   line-height: 0.8;
+  padding-top: 10px;
 }
-
+.smiley_box {
+  display: grid;
+}
+.smiley_box a {
+  place-self: end;
+}
 .smiley {
   width: 12%;
-  margin-left: 100px;
-  margin-top: 20px;
+  margin-inline: auto 12px;
+  padding-bottom: 10px;
 }
