--- a/indexmenu.css
+++ b/indexmenu.css
@@ -82,3 +82,60 @@
       color: #d7d7d7;
     }
   }
+
+  /**** Footer *****/
+
+footer {
+  position: sticky;
+  top: 0;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  font-family: "Cinzel", serif;
+  font-weight: 200;
+  color: black;
+  text-decoration: none;
+  background-color: #bce0cd;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.kontakt {
+  color: #ba431f;
+  font-size: 1.2rem;
+  font-family: "Francois One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.info {
+  color: black;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.follow {
+  color: #ba431f;
+  font-size: 1.2rem;
+  font-family: "Francois One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.adresse {
+  color: black;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+  margin-right: 70px;
+  text-align: center;
+  line-height: 0.8;
+}
+
+.smiley {
+  width: 12%;
+  margin-left: 100px;
+  margin-top: 20px;
+}
