css variabel uden padding og margin

--- a/indexmenu.css
+++ b/indexmenu.css
@@ -139,3 +139,13 @@ footer {
   margin-left: 100px;
   margin-top: 20px;
 }
+
+.insta{
+  font-family: "DM Sans", sans-serif;
+  color:black;
+}
+
+.facebook{
+  font-family: "DM Sans", sans-serif;
+  color:black;
+}
