--- a/mejeri.css
+++ b/mejeri.css
@@ -3,16 +3,10 @@ img {
   display: block;
 }
 
-p {
-  font-family: "DM Sans", sans-serif;
-  font-weight: 200;
-  font-style: normal;
-  line-height: 2rem;
-}
-
 body {
   background-color: #e7f2ee;
   gap: 10px;
+  margin: 20px;
 }
 
 .box1 {
@@ -21,7 +15,7 @@ body {
   width: 1100px;
   height: 700px;
   z-index: -1;
-  top: 44%;
+  top: 30%;
   left: 12%;
 }
 .box2 {
@@ -34,33 +28,34 @@ body {
 }
 
 h1 {
-  font-family: "Emblema One", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 8rem;
-  color: #47a1a1;
-  margin-left: 15%;
-  letter-spacing: 0.2rem;
+  text-align: center;
 }
 
 h2 {
-  font-family: "Francois One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #d9522f;
   text-align: center;
-  padding-top: 50px;
+}
+
+h3 {
+  color: #d9522f;
+  font-size: 20px;
+  font-family: "Francois One", sans-serif;
+  font-style: normal;
+}
+
+p {
+  padding-bottom: 30px;
+}
+
+.is_text {
+  padding-left: 33px;
+  padding-bottom: 5px;
 }
 
 .gaardbutik_center {
   padding-top: 10px;
-}
-
-h3 {
-  font-family: "Francois One", sans-serif;
-  font-weight: 200;
-  font-style: normal;
-  color: #d9522f;
+  text-align: center;
+  font-weight: 100;
+  font-size: 27px;
 }
 
 .image {
@@ -75,7 +70,7 @@ article {
   margin: 10px;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 750px) {
   article {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -89,6 +84,10 @@ article {
     padding: 80px;
   }
 
+  h1 {
+    font-size: 5px;
+  }
+
   .gaardbutik_overskrift {
     text-align: left;
     margin-inline: 200px;
@@ -100,6 +99,11 @@ article {
 
   .gaardbutik_p {
     margin-inline: 200px;
+  }
+
+  .is_text {
+    padding-left: 10px;
+    padding-bottom: 5px;
   }
 
   .text:nth-of-type(3) {
@@ -124,5 +128,8 @@ article {
   }
   .image7 {
     padding: 2%;
+  }
+
+  .image {
   }
 }
