--- a/mejeri.css
+++ b/mejeri.css
@@ -5,34 +5,17 @@ img {
 
 body {
   background-color: #e7f2ee;
-  gap: 10px;
   margin: 20px;
-}
-
-.box1 {
-  position: absolute;
-  background-color: #c8e5d6;
-  width: 1100px;
-  height: 700px;
-  z-index: -1;
-  top: 30%;
-  left: 12%;
-}
-.box2 {
-  position: absolute;
-  background-color: #c8e5d6;
-  width: 1400px;
-  height: 800px;
-  z-index: -1;
-  top: 550%;
 }
 
 h1 {
   text-align: center;
+  font-size: 30px;
 }
 
 h2 {
   text-align: center;
+  font-size: 25px;
 }
 
 h3 {
@@ -46,31 +29,66 @@ p {
   padding-bottom: 30px;
 }
 
-.is_text {
-  padding-left: 33px;
-  padding-bottom: 5px;
-}
-
 .gaardbutik_center {
   padding-top: 10px;
   text-align: center;
   font-weight: 100;
-  font-size: 27px;
-}
-
-.image {
-  width: 350px;
-  margin: 0 auto;
-}
-
-.section4 p {
-  margin-top: 10px;
-}
-article {
-  margin: 10px;
+  font-size: 17px;
+  padding-bottom: 15px;
 }
 
 @media screen and (min-width: 750px) {
+  .is_text {
+    padding-left: 33px;
+    padding-bottom: 5px;
+  }
+
+  .gaardbutik_center {
+    padding-top: 10px;
+    text-align: center;
+    font-weight: 100;
+    font-size: 27px;
+  }
+
+  .image {
+    width: 350px;
+    margin: 0 auto;
+  }
+
+  .section4 p {
+    margin-top: 10px;
+  }
+  article {
+    margin: 10px;
+  }
+  .box {
+    position: absolute;
+    background-color: #c8e5d6;
+    width: 1100px;
+    height: 600px;
+    z-index: -1;
+    top: 30%;
+    left: 12%;
+  }
+
+  .box1 {
+    position: absolute;
+    background-color: #c8e5d6;
+    width: 1300px;
+    height: 670px;
+    z-index: -1;
+    top: 180%;
+    right: 12%;
+  }
+
+  .box2 {
+    position: absolute;
+    background-color: #c8e5d6;
+    width: 1400px;
+    height: 700px;
+    z-index: -1;
+    top: 600%;
+  }
   article {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -85,7 +103,7 @@ article {
   }
 
   h1 {
-    font-size: 5px;
+    font-size: 70px;
   }
 
   .gaardbutik_overskrift {
