--- a/menu.css
+++ b/menu.css
@@ -18,6 +18,10 @@ header {
   list-style: none;
   margin: 0;
   padding: 0;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
 }
 
 .menu li {
