--- a/besoeg_tothaven.css
+++ b/besoeg_tothaven.css
@@ -133,9 +133,9 @@ iframe {
     font-family: "Emblema One", system-ui;
     font-weight: 400;
     font-style: normal;
-    font-size: 6rem;
+    font-size: 70px;
     color: #47a1a1;
-    margin-left: 17%;
+    margin-left: 26%;
     letter-spacing: 0.2rem;
   }
   .knapper {
