--- a/begivenheder.css
+++ b/begivenheder.css
@@ -115,8 +115,8 @@ iframe {
     font-family: "Emblema One", system-ui;
     font-weight: 400;
     font-style: normal;
-    font-size: 6rem;
-    margin-left: 22%;
+    font-size: 70px;
+    margin-left: 28%;
     color: #47a1a1;
     padding-bottom: 2%;
   }
