--- a/general.css
+++ b/general.css
@@ -10,7 +10,7 @@ html{
     --wght-secondary: 400;
     --wght-tritary: 200;
 
-    --size-primary: 6rem;
+    --size-primary: 70px;
     --size-secondary: 40px;
 
     --height: 2rem;
