--- a/menu.css
+++ b/menu.css
@@ -203,7 +203,7 @@ footer {
   font-weight: 200;
   font-style: normal;
   text-align: center;
-  line-height: 0.8;
+  line-height: 20px;
   padding-top: 10px;
 }
 .smiley_box {
@@ -237,11 +237,20 @@ footer {
   }
 
   .adresse{
-    padding-top:50px;
+    padding-top:10px;
     font-size:10px;
+    line-height:15px;
   }
 
   .info{
     font-size:10px;
+  }
+
+  .cvr{
+    font-size:10px;
+  }
+
+  .smiley{
+    width:30%;
   }
 }
