--- a/indexlayout.css
+++ b/indexlayout.css
@@ -21,6 +21,7 @@
     p{
         padding-left:10px;
         padding-right:10px;
+        font-size:13px;
     }
 
     .aesel{
@@ -29,6 +30,8 @@
 
     h2{
         padding-left:10px;
+        padding-right:10px;
+        font-size:30px;
     }
 
   /*LAG*/
@@ -56,52 +59,17 @@
   .hero-image {
     position: relative;
     width: 100%;
-    height:220px;
+    height:167px;
     background: linear-gradient(rgba(76, 103, 95, 0.5), rgba(46, 45, 45, 0.5)), url(indhold/img/heroimage_cropped.jpg.webp) no-repeat 50% 0% fixed;
     background-size: 100%;
     overflow: hidden;
-  }
-
-  .heroh1_2{
-    margin:0;
-    padding:0;
-    text-align:right;
-    color:white;
-    font-size:40px;
-    font-family: "Contrail One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    padding-top:30px;
-  }
-
-  .heroh1{
-    margin:0;
-    padding:0;
-    text-align:left;
-    color:white;
-    font-size:50px;
-    font-family: "Contrail One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    padding-top:52px;
-  }
-
-  .heroh2{
-    margin:0;
-    padding:0;
-    text-align:left;
-    color:white;
-    font-size:30px;
-    font-family: "Contrail One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
   }
 
    /*LINKS I TOPPEN*/
 
    .billetter{
     text-align:left;
-    font-size:20px;
+    font-size:12px;
     color: #FFB000;
     font-family: "Contrail One", sans-serif;
     font-weight: 400;
@@ -119,7 +87,7 @@
     color: #FFB000;
     font-size: 2em;
     position: absolute;
-    top: 165%;
+    top: 230%;
     left:5%;
     width: 90%;
   
@@ -149,7 +117,7 @@
 }
 
 .lottiefile{
-    width: 450px;
-    height: 150px;
+    width: 340px;
+    height: 120px;
     }   
 }
