--- a/besoeg_tothaven.css
+++ b/besoeg_tothaven.css
@@ -89,6 +89,14 @@ h1 {
   font-size: 2rem;
   margin-left: 15%;
 }
+h2 {
+  font-family: "Francois One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #d9522f;
+  font-size: 2rem;
+  margin-left: 20%;
+}
 
 iframe {
   width: 70%;
